Table Comic {
  id integer PK 
  name varchar
  cover_image_url varchar
  status varchar
  description varchar
  chapter_count float
  rating float
  review_count float
  date_added datetime
  last_updated datetime
  year_published varchar
}

Table AltName {
  id integer PK
  comic_id integer PK // Foreign Key
  alt_name varchar
}

Table Review {
  id integer PK
  comic_id integer PK // Foreign Key
  user_name varchar
  rating float
  review_text varchar
  created_at varchar
  updated_at varchar
}

Table Tag {
  id integer PK
  name varchar
}

Table Genre {
  id integer PK
  name varchar
  group varchar
}

Table Source {
  id integer PK
  name varchar
  base_url varchar
  class_name varchar
}

Table Comment {
  id integer PK
  chapter_id integer PK // Foreign Key
  user_name varchar
  comment varchar
}

Table Chapter {
  id integer PK
  comic_source_id integer PK
  chapter_number float
}

Table Page {
  id integer PK
  chapter_id integer
  page_order integer
  page_url varchar
}

Table Comic_Source {
  id integer PK
  comic_id integer PK // Foreign Key
  source_id integer PK // Foreign Key
  subscribed boolean
  chapter_count float
  status varchar
  slug varchar
  date_added datetime
  last_updated datetime
}

Table Comic_Tag {
  comic_id integer PK
  tag_id integer PK
}

Table Comic_Genre {
  comic_id integer PK
  genre_id integer PK
}

// Comic to Source Junction
ref: Comic.id < Comic_Source.comic_id
ref: Comic_Source.source_id > Source.id

// Comic To Tag Junction
ref: Comic.id < Comic_Tag.comic_id
ref: Comic_Tag.tag_id > Tag.id

// Comic To Genre Junction
ref: Comic.id < Comic_Genre.comic_id
ref: Comic_Genre.genre_id > Genre.id

// Source Chapter Page Relationship
ref: Chapter.comic_source_id > Comic_Source.id
ref: Page.chapter_id > Chapter.id

// Review Comic Relationship
ref: Review.comic_id > Comic.id

// Comment Chapter Relationship
ref: Comment.chapter_id > Chapter.id

// Alt Name Comic Relationship
ref: AltName.comic_id > Comic.id


//POSITION({"Comic":{"x":-216.19998019828944,"y":1215.2299133225124,"w":230},"AltName":{"x":-532.3547398241797,"y":1104.1518041993368,"w":230},"Review":{"x":-533.4618876106695,"y":809.8677588603553,"w":230},"Tag":{"x":533.9999639968897,"y":1476.0499095421858,"w":230},"Genre":{"x":532.0457624715395,"y":1626.0050462749737,"w":230},"Source":{"x":536.7950135972683,"y":1273.157011813807,"w":230},"Chapter":{"x":537.9021613837581,"y":1120.0602792562574,"w":230},"Page":{"x":905.7481450670361,"y":1087.850085239056,"w":230},"Comic_Source":{"x":225.6811981918372,"y":1136.555900729829,"w":230},"Comic_Tag":{"x":228.36000756065312,"y":1479.8099405048604,"w":230},"Comic_Genre":{"x":224.9417715216311,"y":1619.9520254110753,"w":230},"Comment":{"x":905.1309844401926,"y":913.2592225186352,"w":230}})